Closed Bug 390171 Opened 18 years ago Closed 18 years ago

clearing history for a host can delete annotations

Categories

(Firefox :: Bookmarks & History, defect)

defect
Not set
major

Tracking

()

RESOLVED FIXED
Firefox 3 alpha7

People

(Reporter: dietrich, Assigned: dietrich)

Details

(Keywords: dataloss)

Attachments

(1 file)

Attached patch fixSplinter Review
a typo in nsNavHistory::RemovePagesFromHost can cause deletion of annotations that are EXPIRE_NEVER.
Flags: blocking-firefox3?
Attachment #274485 - Flags: review?(sspitzer)
Flags: blocking-firefox3? → blocking-firefox3+
Comment on attachment 274485 [details] [diff] [review] fix r=sspitzer as a follow up, can you expand the unit test to catch (and now verify) this fix?
Attachment #274485 - Flags: review?(sspitzer) → review+
Keywords: dataloss
Whiteboard: [checkin-needed?]
Whiteboard: [checkin-needed?] → [checkin-needed]
Checking in toolkit/components/places/src/nsNavHistory.cpp; /cvsroot/mozilla/toolkit/components/places/src/nsNavHistory.cpp,v <-- nsNavHistory.cpp new revision: 1.148; previous revision: 1.147 done
Status: NEW → RESOLVED
Closed: 18 years ago
Flags: in-testsuite?
Resolution: --- → FIXED
Whiteboard: [checkin-needed]
what are STR to verify this?
Bug 451915 - move Firefox/Places bugs to Firefox/Bookmarks and History. Remove all bugspam from this move by filtering for the string "places-to-b-and-h". In Thunderbird 3.0b, you do that as follows: Tools | Message Filters Make sure the correct account is selected. Click "New" Conditions: Body contains places-to-b-and-h Change the action to "Delete Message". Select "Manually Run" from the dropdown at the top. Click OK. Select the filter in the list, make sure "Inbox" is selected at the bottom, and click "Run Now". This should delete all the bugspam. You can then delete the filter. Gerv
Component: Places → Bookmarks & History
QA Contact: places → bookmarks
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: