Bug 390171  clearing history for a host can delete annotations (r=sspitzer, a=mconnor)